--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/drawer": "^7.7.8",
     "@react-navigation/native": "^7.1.24",
     "@react-navigation/native-stack": "^7.8.5",
+    "@rneui/themed": "^4.0.0-rc.8",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "expo": "~54.0.25",
@@ -22,6 +24,7 @@
     "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.16.1",
