--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
+    "lucide-react-native": "^0.556.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-dropdown-picker": "^5.4.6",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@react-native-community/cli": "latest",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "~5.9.2"
   },
