--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "expo": "~54.0.25",
+    "expo-device": "~8.0.10",
+    "expo-notifications": "~0.32.14",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
     "lucide-react-native": "^0.556.0",
@@ -35,8 +37,8 @@
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
     "@react-native-community/cli": "latest",
+    "@types/react": "~19.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "~5.9.2"
   },
