--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.19",
     "expo": "~54.0.25",
     "expo-device": "~8.0.10",
+    "expo-linear-gradient": "^15.0.8",
     "expo-notifications": "~0.32.14",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
