--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@firebase/auth": "^1.11.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.5.1",
     "@react-navigation/bottom-tabs": "^7.8.11",
@@ -21,6 +22,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "expo": "~54.0.25",
+    "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-notifications": "~0.32.14",
