--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@firebase/auth": "^1.11.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.5.1",
+    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-firebase/messaging": "^23.5.0",
     "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/drawer": "^7.7.8",
     "@react-navigation/native": "^7.1.24",
@@ -23,6 +25,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "expo": "~54.0.25",
+    "expo-application": "~7.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-linear-gradient": "^15.0.8",
