Update Google services config path and add credentials file
Moved the googleServicesFile path for both iOS and Android in app.json to './credentials/google-services.json' and added the credentials/google-services.json file. Also updated the EAS projectId.

--- a/app.json
+++ b/app.json
@@ -12,11 +12,15 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.kindergartenreactnative.App",
-      "googleServicesFile": "./GoogleService-Info.plist"
+      "googleServicesFile": "./credentials/google-services.json"
     },
     "android": {
       "useNextNotificationsApi": true,
@@ -24,7 +28,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "googleServicesFile": "./android/app/google-services.json",
+      "googleServicesFile": "./credentials/google-services.json",
       "package": "com.kindergartenreactnative.App"
     },
     "plugins": [
@@ -33,7 +37,9 @@
         {
           "icon": "./assets/notification-icon.png",
           "color": "#ffffff",
-          "sounds": ["./assets/notification.wav"]
+          "sounds": [
+            "./assets/notification.wav"
+          ]
         }
       ]
     ],
@@ -46,7 +52,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "2804f1d6-06e0-45ea-b6c5-1884b3018dc2"
+        "projectId": "134e5571-d177-49ac-b418-dd167612a971"
       }
     }
   }
