--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@firebase/auth": "^1.11.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.5.1",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-firebase/app": "^23.5.0",
     "@react-native-firebase/messaging": "^23.5.0",
     "@react-navigation/bottom-tabs": "^7.8.11",
@@ -28,6 +28,7 @@
     "expo-application": "~7.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
+    "expo-font": "~14.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-notifications": "~0.32.14",
     "expo-status-bar": "~3.0.8",
@@ -39,11 +40,13 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@react-native-community/cli": "latest",
