Add expo-build-properties package and configure in app.json
Added 'expo-build-properties' version 1.0.10 to dependencies in package.json and package-lock.json. Updated app.json to include expo-build-properties with Android manifest placeholder for firebase messaging notification color.

--- a/app.json
+++ b/app.json
@@ -12,11 +12,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.kindergartenreactnative.app",
@@ -39,7 +35,17 @@
           "sounds": []
         }
       ],
-      "expo-font"
+      "expo-font",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "manifestPlaceholders": {
+              "firebase_messaging_default_notification_color": "@color/white"
+            }
+          }
+        }
+      ]
     ],
     "notification": {
       "icon": "./assets/notification-icon.png",
