--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.19",
     "expo": "~54.0.25",
     "expo-application": "~7.0.8",
+    "expo-build-properties": "^1.0.10",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-font": "~14.0.10",
