--- a/app.json
+++ b/app.json
@@ -7,17 +7,21 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+
     "platforms": ["ios", "android", "web"],
+
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.kindergartenreactnative.app",
       "googleServicesFile": "./credentials/google-services.json"
     },
+
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
@@ -26,7 +30,10 @@
       "googleServicesFile": "./credentials/google-services.json",
       "package": "com.kindergartenreactnative.app"
     },
+
     "plugins": [
+      "expo-font",
+
       [
         "expo-notifications",
         {
@@ -35,25 +42,31 @@
           "sounds": []
         }
       ],
-      "expo-font",
+
       [
         "expo-build-properties",
         {
           "android": {
-            "manifestPlaceholders": {
-              "firebase_messaging_default_notification_color": "@color/white"
-            }
+            "manifestApplicationAttributes": {
+              "tools:replace": "android:resource"
+            },
+            "extraProguardRules": ""
           }
         }
-      ]
+      ],
+
+      "./plugins/fcmNotificationColor"
     ],
+
     "notification": {
       "icon": "./assets/notification-icon.png",
       "color": "#ffffff"
     },
+
     "web": {
       "favicon": "./assets/favicon.png"
     },
+
     "extra": {
       "eas": {
         "projectId": "134e5571-d177-49ac-b418-dd167612a971"
