Add Firebase notification color metadata to manifest
Introduces manifestMetaData for Firebase messaging to specify the default notification color using @color/notification_icon_color. This change ensures notifications use the desired color resource.

--- a/app.json
+++ b/app.json
@@ -50,7 +50,13 @@
             "manifestApplicationAttributes": {
               "tools:replace": "android:resource"
             },
-            "extraProguardRules": ""
+            "manifestMetaData": [
+              {
+                "android:name": "com.google.firebase.messaging.default_notification_color",
+                "android:resource": "@color/notification_icon_color",
+                "tools:replace": "android:resource"
+              }
+            ]
           }
         }
       ],
