--- a/app.json
+++ b/app.json
@@ -28,12 +28,15 @@
         "backgroundColor": "#ffffff"
       },
       "googleServicesFile": "./credentials/google-services.json",
-      "package": "com.kindergartenreactnative.app"
+      "package": "com.kindergartenreactnative.app",
+      "notification": {
+        "icon": "./assets/notification-icon.png",
+        "color": "#ffffff"
+      }
     },
 
     "plugins": [
       "expo-font",
-
       [
         "expo-notifications",
         {
@@ -41,33 +44,8 @@
           "color": "#ffffff",
           "sounds": []
         }
-      ],
-
-      [
-        "expo-build-properties",
-        {
-          "android": {
-            "manifestApplicationAttributes": {
-              "tools:replace": "android:resource"
-            },
-            "manifestMetaData": [
-              {
-                "android:name": "com.google.firebase.messaging.default_notification_color",
-                "android:resource": "@color/notification_icon_color",
-                "tools:replace": "android:resource"
-              }
-            ]
-          }
-        }
-      ],
-
-      "./plugins/fcmNotificationColor"
+      ]
     ],
-
-    "notification": {
-      "icon": "./assets/notification-icon.png",
-      "color": "#ffffff"
-    },
 
     "web": {
       "favicon": "./assets/favicon.png"
