--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-firebase/app": "^23.5.0",
     "@react-native-firebase/messaging": "^23.5.0",
+    "@react-native/metro-config": "^0.83.0",
     "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/drawer": "^7.7.8",
     "@react-navigation/native": "^7.1.24",
@@ -24,7 +25,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
-    "expo": "~54.0.25",
+    "expo": "^54.0.27",
     "expo-application": "~7.0.8",
     "expo-build-properties": "^1.0.10",
     "expo-dev-client": "~6.0.20",
